# 04_ejemplo_mpi

./: CMakeLists.txt  main.cpp  matrices_mult.cpp
